FIX: Text overlap

--- a/assets/css/custom/theme.css
+++ b/assets/css/custom/theme.css
@@ -2463,7 +2463,8 @@ footer p a {
     }
 
     .hero-section-2 .headlines-wrapper {
-        top: 120px;
+        top: 230px;
+        font-size: 36px;
     }
 
     .hero-section-2 .headlines-wrapper .typed-cursor {
@@ -2472,7 +2473,7 @@ footer p a {
     }
 
     .hero-section-2 .skilltechtypetext {
-        font-size: 28px;
+        font-size: 42px;
         line-height: 40px;
     }
 
@@ -2484,16 +2485,24 @@ footer p a {
     }
 
     .hero-section-2 .first-headline {
-        top: 180px;
+        top: 270px;
     }
 
     .hero-section-2 .second-headline {
-        top: 240px;
+        padding-left: 20px ;
+        padding-right: 20px ;
+        font-size: 16px;
+        top: 320px;
     }
 
     .image-section {
-        padding-left: 40px;
-        padding-right: 40px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top:80px;
+    }
+
+    .our-work-section .see-work h2{
+        font-size: 20px;
     }
 
     .about-section {
@@ -2673,6 +2682,7 @@ footer p a {
     }
 
     .hero-section-2 .second-headline {
+
         top: 170px;
     }
 
@@ -2978,7 +2988,7 @@ footer p a {
     }
 
     .services-section {
-        height: 1350px;
+        height: none;
     }
 
     .service-content .left,
